--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@types/jsonwebtoken": "^9.0.6",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cropperjs": "^1.6.2",
     "date-fns": "^4.1.0",
@@ -42,6 +42,7 @@
     "quill-image-resize-module": "^3.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-day-picker": "^9.3.2",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.53.2",
     "react-input-mask": "^2.0.4",
