--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fontsource/roboto": "^5.1.0",
+    "@hookform/resolvers": "^3.9.1",
     "@lexical/react": "^0.18.0",
     "@lexical/rich-text": "^0.18.0",
     "@mui/icons-material": "^6.1.2",
@@ -49,7 +50,8 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.0",
     "react-tabs": "^6.0.2",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.18",
